
2017-02-05  Ron Norman <rjn@inglenet.com>
	* gcdiff.c    : Updates to handle time compares and look
	   for run options in gcdiff.conf in current directory

2017-02-03  Ron Norman <rjn@inglenet.com>
	* gcdiff.c    : New module for doing a 'diff' for test cases
	* Makefile.am : Updated for gcdiff.c
	* Makefile.in : Updated for gcdiff.c

2016-01-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* cobcrun.c (cobcrun_print_version): changed generation of build stamp

2015-03-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* cobcrun.c : new option --config=<file> / -c <file> for setting the
	  runtime configuration file to be loaded during initialisation

2014-08-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* cobcrun.c : Changed output of --help for help2man
	* Makefile.am : Added manpage generation + install

2014-05-06  Philipp Böhme <phi.boehme@googlemail.com>

	* cobcrun.c : Added --runtime-env for displaying current runtime variables.;
	  --version shows both version numbers of cobcrun (new) and libcob.;
	  moved print_info (along with print_var) to libcob/common.c

2014-02-17  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net> 

	* cobcrun.c : Tweaked --info for showing current settings (environment) along
	  with settings hard-wired during build (COB_xyz),
	  removed entries in output that belongs to cobc only

2012-05-09  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobcrun.c : Added conversion for enabling options in WIN style;
	  Use getopt for option parsing;
	  Set LC_ALL "" for native messages

2010-06-28  Roger While <simrw@sim-basis.de>

	* MARK - Version 2.0
	* Move to GPL/LGPL 3

2010-??-??  Roger While <simrw@sim-basis.de>

	* Added --info

2008-10-20  Roger While <simrw@sim-basis.de>

	* cobcrun.c : Allow help and version options

2007-12-27  Roger While <simrw@sim-basis.de>

	** Mark 1.0 RELEASE

2006-10-23  Roger While <simrw@sim-basis.de>

	* Makefile.am : Remove gcc options
